# bevy-training

./: Cargo.toml  README.md
examples/: ball_game.rs
src/: ball_game.rs  health_bar.rs  lib.rs  main.rs  player.rs  weapon.rs
